# TwitchRumble

./: .gitignore  README.md  TwitchBoxingRing.spec  auth.py  build.py  config.py  main.py  main.spec  movepool.json  overlay.css  overlay.html  overlay.js  pyproject.toml  release.yaml  requirements.txt
.github/workflows/: build.yml
configs/: config.template.json  movepool.json  typechart.json
rumble/: auth.py  config.py  eventsub.py  main.py
rumble/configs/: twitch_token.json
tests/: test_fight.py
web/: overlay.css  overlay.html  overlay.js
