[project]
name = "twitchrumble"
version = "0.1.0"
description = "A battler system for twitch streamers to use during streams to let viewers battle."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "pyinstaller==6.19.0",
    "websockets>=12.0",
]

[project.scripts]
rumble = "rumble.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rumble/rumble", "web/web", "configs/configs"]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
